--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.82.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "postcss": "^8.5.6",
